@@ -23,6 +23,7 @@
 ## Technical
 ##
 
+- Building: On binary release package, link libiconv static for windows binaries
 - Dictstat: Structure for dictstat file changed as it has to include --encoding-from and --encoding-to parameter now
 - OpenCL Runtime: Updated AMDGPU-Pro driver version check, do warn if version 17.10 is detected which is known to be broken
 - WPA cracking: Reduced --nonce-error-corrections default from 16 to 8 to compensate speed drop caused due to Big-Endian fixes
